Fix fieldset alignment

--- a/styles.css
+++ b/styles.css
@@ -57,11 +57,11 @@ fieldset {
     border: solid 0px;
     padding: 0px;
     margin: 0px;
-    width: 200px;
+    width: 100%;
     height: 100%;
 
     display: grid;
-    justify-content: center;
+    
 }
 
 
